--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,7 +10,8 @@ body {
 img {
     display: block;
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
 }
 
 .gallery {
@@ -23,10 +24,16 @@ img {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 1px 6px rgba(46, 47, 66, 0.08);
+    object-fit: cover;
 }
 
 .info {
     display: flex;
     gap: 20px;
     padding: 10px;
+}
+.gallery__link {
+    display: inline-block;
+    width: 350px;
+    height: 230px;
 }
