--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -45,8 +45,8 @@ a:hover {
     text-decoration: none;
     display: none;
     position: fixed;
-        top: 5px;
-        right: 5px;
+        bottom: 20px;
+        right: 20px;
 
     background-color: rgb(252, 242, 231);
     border: 2px ridge khaki;
